public/css/custom.css
header {
	position: relative;
  width: 100%;
	top: 50px;
	padding-top: 50px;
	height: 50vh;
	background: url(../images/bcg.jpeg);
	background-repeat: no-repeat;
	background-size: cover;
	background-position: 60% 50%;
}

header .jumbotron {
	background: rgba(255, 255, 255, 0.7);
}

#slideshow-section {
	position: relative;
	height: 100vh;
}

section,
footer {
	position: relative;
}

section {
	margin-top: 50px;
  padding: 60px;
  height: 100%;
  min-height: auto;
}

/* Header and text styles */
#errorMsgUpload {
  font-size: 20px;
  line-height: 20px;
  font-weight: 700;
  color: #c12e12;
  letter-spacing: 1.2px;
  font-family: "Montserrat", sans-serif;
}

/*Form styles*/
.custom-file-upload {
    border: 1px ridge #3498db;
    border-radius: 5px;
    width: 100%;
    text-align: center;
    display: inline-block;
    padding: 6px 12px;
    cursor: pointer;
    background: transparent;
    transition: all 0.2s;
}

#campgroundImgUpload {
  display: none;
  background: transparent;
  border: 1px ridge #3498db;
}

.valid {
  border: 2px ridge green;
}

.invalid {
  border: 2px ridge #c12e12;
}

/*Navbar styles*/

/*@media (min-width: 768px) {
  .navbar-custom {
    background-color: transparent;
    visibility: hidden;
    -webkit-transition: padding 0.3s;
    -moz-transition: padding 0.3s;
    transition: padding 0.3s;
    border: none;
  }

  .navbar-custom .navbar-nav > li > a {
    color: transparent;
    visibility: hidden;
  }

  .navbar-custom .navbar-nav > .active > a {
    border-radius: 3px;
  }
}

@media (min-width: 768px) {
  .navbar-custom.affix {
    visibility: visible;
  }

  .navbar-custom.affix .navbar-nav > li > a {
    color: #ffffff;
    visibility: visible;
  }
}*/

/*Bootstrap grid styles */


/*Masonry grid styles*/
/* fluid 5 columns */
.grid-sizer,
/* 2 columns wide */
.grid-item {
  width: 33.33%;
  padding: 0;
}

.grid .grid-item img {
  max-width: 100%;
}

/*Sticky Footer*/
html {
  position: relative;
  min-height: 100%;
}

body {
  min-height: 100%;
  /* Margin bottom by footer height */
  text-align: center;
  margin-bottom: 50px;
  font-family: 'Raleway', sans-serif;
}

.padded {
  padding-top: 30px;
}

footer {
  position: relative;
  width: 100%;
  bottom: 0;
  /* Set the fixed height of the footer here */
  height: 50px;
  padding-top: 20px;
  background: #ffffff;
}

footer p {
	color: #000;
}
/*end of sticky footer*/

/*Portfolio styles for grid*/
/* If have the image layer */
.rig-img {
    border:none;
    transform:scale(1);
    transition:all 1s;
}

#profile .rig-img {
  height: auto;
}

.rig .rig-cell:hover .rig-img {
    transform:scale(1.03);
}

/* If have the overlay layer */
.rig-overlay {
    position: absolute;
    display:block;
    width: 100%;
    z-index: 2;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    margin: auto;
    background: rgb(255, 148, 75);
    background-size:50px 50px;
    opacity:0;
    filter:alpha(opacity=0);/*For IE6 - IE8*/
    transition:all 0.6s;
}
.rig .rig-cell:hover .rig-overlay {
    opacity:0.7;
    transform: scale(1);
    transition: all 1s;
}

/* If have captions */
.rig-header, .rig-text, .rig-icon {
    display:block;
    padding:0 10px;
    box-sizing:border-box;
    position:absolute;
    z-index: 3;
    left:0;
    width:100%;
    text-align:center;
    text-transform:capitalize;
    font-family: 'Yrsa', serif;
    font-size:24px;
    font-weight:bold;
    line-height: 1.2em;
    letter-spacing: 1.1px;
    top:40%;
    color:#333;
    opacity:0;
    filter:alpha(opacity=0);/*For older IE*/
    transform:translateY(-20px);
    transition:all .3s;
}

.rig .rig-cell:hover .rig-icon {
  transform:translateY(0px);
  top: 50%;
}

.rig .rig-cell:hover .rig-header {
    transform:translateY(-55px);
}

#profile .rig .rig-cell:hover .rig-header {
  transform: translateY(-45px);
}

.rig .rig-cell:hover .rig-text {
    transform:translateY(0px);
}

.rig .rig-cell:hover .rig-text,
.rig .rig-cell:hover .rig-header,
.rig .rig-cell:hover .rig-icon {
  opacity: 1;
  margin-bottom: 10px;
}

